--- a/static/index.html
+++ b/static/index.html
@@ -91,8 +91,7 @@
         // Initialize WebSocket connection
         function connectWebSocket() {
             console.log('Attempting to connect WebSocket...');
-            // Updated WebSocket URL to match your server
-            ws = new WebSocket('ws://peve.onrender.com/ws');            
+            ws = new WebSocket('wss://peve.onrender.com/ws');            
             ws.onopen = () => {
                 console.log('WebSocket connection established successfully');
                 isConnected = true;
